--- a/gold-admin-frontend/src/app/views/pages/apps/e-commerce/products/_subs/specifications/specifications-list/specifications-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/apps/e-commerce/products/_subs/specifications/specifications-list/specifications-list.component.html
@@ -77,12 +77,12 @@
 		</ng-container>
 
 		<ng-container matColumnDef="_specificationName">
-			<mat-header-cell *matHeaderCellDef mat-sort-header class="mat-column">Specification Type</mat-header-cell>
+			<mat-header-cell *matHeaderCellDef  class="mat-column">Specification Type</mat-header-cell>
 			<mat-cell *matCellDef="let spec" class="mat-column">{{spec._specificationName}}</mat-cell>
 		</ng-container>
 
 		<ng-container matColumnDef="value">
-			<mat-header-cell *matHeaderCellDef mat-sort-header class="mat-column">Value</mat-header-cell>
+			<mat-header-cell *matHeaderCellDef  class="mat-column">Value</mat-header-cell>
 			<mat-cell *matCellDef="let spec" class="mat-column">{{spec.value}}</mat-cell>
 		</ng-container>
 
