--- a/gold-admin-frontend/src/app/views/pages/material/data-table/material-table/material-table.component.html
+++ b/gold-admin-frontend/src/app/views/pages/material/data-table/material-table/material-table.component.html
@@ -98,22 +98,22 @@
 				<mat-table #table3 [dataSource]="dataSource3" #sort3="matSort" matSort>
 					<!-- Position Column -->
 					<ng-container matColumnDef="position">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > No. </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
 					</ng-container>
 					<!-- Name Column -->
 					<ng-container matColumnDef="name">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Name </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
 					</ng-container>
 					<!-- Weight Column -->
 					<ng-container matColumnDef="weight">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Weight </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Weight </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
 					</ng-container>
 					<!-- Symbol Column -->
 					<ng-container matColumnDef="symbol">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Symbol </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
 					</ng-container>
 					<mat-header-row *matHeaderRowDef="displayedColumns3"></mat-header-row>
@@ -237,7 +237,7 @@
 				</ng-container>
 				<!-- Created Column -->
 				<ng-container matColumnDef="created">
-					<mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">
+					<mat-header-cell *matHeaderCellDef  disableClear="true">
 						Created
 					</mat-header-cell>
 					<mat-cell *matCellDef="let row">{{ row.created_at | date }}</mat-cell>
@@ -261,22 +261,22 @@
 			<mat-table #sort7="matSort" [dataSource]="dataSource7" matSort>
 				<!-- ID Column -->
 				<ng-container matColumnDef="id">
-					<mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
+					<mat-header-cell *matHeaderCellDef > ID </mat-header-cell>
 					<mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
 				</ng-container>
 				<!-- Progress Column -->
 				<ng-container matColumnDef="progress">
-					<mat-header-cell *matHeaderCellDef mat-sort-header> Progress </mat-header-cell>
+					<mat-header-cell *matHeaderCellDef > Progress </mat-header-cell>
 					<mat-cell *matCellDef="let row"> {{row.progress}}% </mat-cell>
 				</ng-container>
 				<!-- Name Column -->
 				<ng-container matColumnDef="name">
-					<mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+					<mat-header-cell *matHeaderCellDef > Name </mat-header-cell>
 					<mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
 				</ng-container>
 				<!-- Color Column -->
 				<ng-container matColumnDef="color">
-					<mat-header-cell *matHeaderCellDef mat-sort-header> Color </mat-header-cell>
+					<mat-header-cell *matHeaderCellDef > Color </mat-header-cell>
 					<mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </mat-cell>
 				</ng-container>
 				<mat-header-row *matHeaderRowDef="displayedColumns7"></mat-header-row>
