--- a/gold-admin-frontend/src/app/views/pages/material/data-table/sort-header/sort-header.component.html
+++ b/gold-admin-frontend/src/app/views/pages/material/data-table/sort-header/sort-header.component.html
@@ -9,17 +9,17 @@
 		<p class="kt-section__sub">
 			The
 			<mark>matSort</mark> and
-			<mark>mat-sort-header</mark> are used, respectively, to add sorting state and display to tabular data.
+			<mark></mark> are used, respectively, to add sorting state and display to tabular data.
 		</p>
 		<div class="kt-separator kt-separator--dashed"></div>
 		<div class="kt-section__content">
 			<table  #sort1="matSort" (matSortChange)="sortData($event)" matSort>
 				<tr>
-					<th mat-sort-header="name">Dessert (100g)</th>
-					<th mat-sort-header="calories">Calories</th>
-					<th mat-sort-header="fat">Fat (g)</th>
-					<th mat-sort-header="carbs">Carbs (g)</th>
-					<th mat-sort-header="protein">Protein (g)</th>
+					<th ="name">Dessert (100g)</th>
+					<th ="calories">Calories</th>
+					<th ="fat">Fat (g)</th>
+					<th ="carbs">Carbs (g)</th>
+					<th ="protein">Protein (g)</th>
 				</tr>
 
 				<tr *ngFor="let dessert of sortedData">
@@ -44,25 +44,25 @@
 
 					<!-- Position Column -->
 					<ng-container matColumnDef="position">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > No. </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
 					</ng-container>
 
 					<!-- Name Column -->
 					<ng-container matColumnDef="name">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Name </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
 					</ng-container>
 
 					<!-- Weight Column -->
 					<ng-container matColumnDef="weight">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Weight </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Weight </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
 					</ng-container>
 
 					<!-- Symbol Column -->
 					<ng-container matColumnDef="symbol">
-						<mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </mat-header-cell>
+						<mat-header-cell *matHeaderCellDef > Symbol </mat-header-cell>
 						<mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
 					</ng-container>
 
