--- a/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/appraiser-list/appraiser-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/appraiser-list/appraiser-list.component.html
@@ -1,60 +1,16 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
-    <!-- PORTLET LOADING | Binded to TABLE Datasource -->
-    <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <kt-portlet-header [title]="'Appraisal List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
-
-        <ng-container ktPortletTools>
-
-            <!-- Buttons (Material Angular) | See off.documenations 'https://material.angular.io/components/button/overview' -->
-            <!-- mat-raised-button | Rectangular contained button w/ elevation  -->
-        </ng-container>
-    </kt-portlet-header>
-    <!-- end::Header -->
-
     <kt-portlet-body>
-        <!-- start::FILTERS & GROUP ACTIONS -->
-        <div class="kt-form kt-margin-b-10">
-
-            <!-- start::GROUP ACTIONS -->
-            <!-- Group actions list: 'Delete selected' | 'Fetch selected' | 'Update status for selected' -->
-            <!-- Group actions are shared for all LISTS -->
-           
-            <!-- end::GROUP ACTIONS -->
-        </div>
-        <!-- end::FILTERS & GROUP ACTIONS -->
-
-        <!-- MATERIAL TABLE | Binded to datasources -->
-        <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-                matSortActive="id" matSortDirection="asc" matSortDisableClear>
-                <!-- Checkbox Column -->
-
-                <!-- Table with selection -->
-                <!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-                <!-- <ng-container matColumnDef="select">
-                    <mat-header-cell *matHeaderCellDef class="mat-column-checkbox">
-                        <mat-checkbox (change)="$event ? masterToggle() : null"
-                            [checked]="selection.hasValue() && isAllSelected()"
-                            [indeterminate]="selection.hasValue() && !isAllSelected()">
-                        </mat-checkbox>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let row" class="mat-column-checkbox">
-                        <mat-checkbox (click)="$event.stopPropagation()"
-                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container> -->
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" >
 
                 <ng-container matColumnDef="customerId">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Id</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef >Customer Id</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.customerId}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerName">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef >Customer Name</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.customerName | titlecase}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
@@ -80,10 +36,8 @@
 
         <!-- start: BOTTOM -->
         <div class="mat-table__bottom">
-            <!-- MATERIAL SPINNER | Url: 'https://material.angular.io/components/progress-spinner/overview' -->
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-            <!-- MATERIAL PAGINATOR | Binded to dasources -->
-            <!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
+            
             <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
                 [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
