--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.html
@@ -1,23 +1,12 @@
 <kt-portlet>
-    <!-- PORTLET LOADING | Binded to TABLE Datasource -->
-    <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <kt-portlet-header [title]="'Brokers list'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
-    </kt-portlet-header>
-    <!-- end::Header -->
     <kt-portlet-body>
-        <!-- MATERIAL TABLE | Binded to datasources -->
-        <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
         <div class="mat-table__wrapper">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-                matSortActive="id" matSortDirection="asc" matSortDisableClear>
-                <!-- Checkbox Column -->
 
-                <!-- Table with selection -->
-                <!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" >
+               
                 <ng-container matColumnDef="merchantName">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Merchant Name</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >Merchant Name</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.merchant.merchantName | titlecase}}
@@ -25,8 +14,8 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="storeId">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Store Id</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >Store Id</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.storeId}}
@@ -34,8 +23,8 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="email">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>User Email</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >User Email</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.email}}
@@ -43,8 +32,8 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.mobileNumber}}
@@ -52,8 +41,8 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="address">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >Address</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.address[0].address}}
@@ -61,8 +50,8 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="state">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >State</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.address[0].state.name}}
@@ -71,8 +60,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="city">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>City</mat-header-cell>
+
+                    <mat-header-cell *matHeaderCellDef >City</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.address[0].city.name}}
@@ -82,7 +71,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="pincode">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>PinCode</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef >PinCode</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
                             {{broker.user.address[0].postalCode}}
@@ -91,7 +80,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="approvalStatus">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Approval Status</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef >Approval Status</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div [ngClass]="broker.approvalStatusId == 1 ? 'text-success' :broker.approvalStatusId == 2 ? 'text-warning' : 'text-danger'"
                             *ngFor="let approval of status">
@@ -101,7 +90,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="status">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef >Status</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <mat-slide-toggle [color]="'accent'" [checked]="broker.status" (change)="toogle(broker,$event)">
                         </mat-slide-toggle>
@@ -134,10 +123,8 @@
 
         <!-- start: BOTTOM -->
         <div class="mat-table__bottom">
-            <!-- MATERIAL SPINNER | Url: 'https://material.angular.io/components/progress-spinner/overview' -->
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-            <!-- MATERIAL PAGINATOR | Binded to dasources -->
-            <!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
+            
             <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
                 [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
