--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
@@ -1,9 +1,5 @@
 <kt-portlet>
-	<!-- PORTLET LOADING | Binded to TABLE Datasource -->
-	<!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-	<kt-portlet-header [title]="'Roles list'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
-	</kt-portlet-header>
-	<!-- end::Header -->
+
 	<kt-portlet-body>
 		<!-- MATERIAL TABLE | Binded to datasources -->
 		<!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
@@ -16,8 +12,8 @@
 				<!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
 
 				<ng-container matColumnDef="roleName">
-					<!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Role Name</mat-header-cell>
+					<!-- ATTRIBUTE   for sorting | https://material.angular.io/components/sort/overview -->
+					<mat-header-cell *matHeaderCellDef >Role Name</mat-header-cell>
 					<mat-cell *matCellDef="let role">
 						<div class="font-weight-bold text-color kt-pointer" (click)="permissions(role)">
 							{{role.roleName | titlecase}}
@@ -26,19 +22,19 @@
 				</ng-container>
 
 				<ng-container matColumnDef="createdBy">
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Created By</mat-header-cell>
+					<mat-header-cell *matHeaderCellDef >Created By</mat-header-cell>
 					<mat-cell *matCellDef="let role">{{role.createdByUser.firstName | titlecase}} &nbsp; {{role.createdByUser.lastName | titlecase}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedBy">
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified By</mat-header-cell>
+					<mat-header-cell *matHeaderCellDef >Modified By</mat-header-cell>
 					<mat-cell *matCellDef="let role">{{role.updatedByUser.firstName | titlecase}} &nbsp; {{role.updatedByUser.lastName | titlecase}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedDate">
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Date</mat-header-cell>
+					<mat-header-cell *matHeaderCellDef >Modified Date</mat-header-cell>
 					<mat-cell *matCellDef="let role">{{role.createdAt | date:'mediumDate'}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedTime">
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Time</mat-header-cell>
+					<mat-header-cell *matHeaderCellDef >Modified Time</mat-header-cell>
 					<mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}}</mat-cell>
 				</ng-container>
 
