--- a/gold-admin-frontend/src/app/views/partials/content/widgets/general/data-table/data-table.component.html
+++ b/gold-admin-frontend/src/app/views/partials/content/widgets/general/data-table/data-table.component.html
@@ -5,49 +5,49 @@
 	<!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
 	<table mat-table class="lmat-elevation-z8" [dataSource]="dataSource" matSort matSortActive="id" matSortDirection="asc" matSortDisableClear>
 		<ng-container matColumnDef="id">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+			<th mat-header-cell *matHeaderCellDef >Id</th>
 			<td mat-cell *matCellDef="let product" class="mat-column-vinCode">{{product.id}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cManufacture">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Manufacture</th>
+			<th mat-header-cell *matHeaderCellDef >Manufacture</th>
 			<td mat-cell *matCellDef="let product">{{product.cManufacture}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cModel">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Model</th>
+			<th mat-header-cell *matHeaderCellDef >Model</th>
 			<td mat-cell *matCellDef="let product">{{product.cModel}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cModelYear">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Model Year</th>
+			<th mat-header-cell *matHeaderCellDef >Model Year</th>
 			<td mat-cell *matCellDef="let product">{{product.cModelYear}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cMileage">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Mileage</th>
+			<th mat-header-cell *matHeaderCellDef >Mileage</th>
 			<td mat-cell *matCellDef="let product">{{product.cMileage}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cColor">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Color</th>
+			<th mat-header-cell *matHeaderCellDef >Color</th>
 			<td mat-cell *matCellDef="let product" [ngStyle]="{ 'color' : product.cColor }">{{product.cColor}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cPrice">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+			<th mat-header-cell *matHeaderCellDef >Price</th>
 			<td mat-cell *matCellDef="let product">${{product.cPrice}}</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cStatus">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+			<th mat-header-cell *matHeaderCellDef >Status</th>
 			<td mat-cell *matCellDef="let product">
 				<span class="kt-badge kt-badge--inline kt-badge--pill kt-badge--{{ getItemCssClassByStatus(product.cStatus) }} kt-badge--wide">{{ getItemStatusString(product.cStatus) }}</span>
 			</td>
 		</ng-container>
 
 		<ng-container matColumnDef="cCondition">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Condition</th>
+			<th mat-header-cell *matHeaderCellDef >Condition</th>
 			<td mat-cell *matCellDef="let product">
 				<span class="kt-badge kt-badge--{{ getItemCssClassByCondition(product.cCondition) }} kt-badge--dot"></span>&nbsp;
 				<span class="kt--font-bold kt-font-{{ getItemCssClassByCondition(product.cCondition) }}">{{ getItemConditionString(product.cCondition) }}</span>
