--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -10,7 +10,7 @@
                 <label class="custom-checkbox">
                   <span class="label-checkbox text-color font-weight-500">Select All</span>
                   <input type="checkbox" class="" id="view" [checked]="selectAll.cat"
-                    (change)="selectAllCat($event.target.checked,'category')">
+                    (change)="selectAllCat($event.target.checked,'category')" >
                   <span class="checkmark top-0" #checkboxOne></span>
                 </label>
                 <div class="row kt-margin-t-15">
@@ -68,23 +68,26 @@
                 <div class="row kt-margin-t-15">
                   <div class="col-12 kt-margin-t-10" *ngFor="let category of permissions;index as catIndex">
                     <div *ngIf="category.isSelected">
-                      <p class=" text-color font-weight-500">{{category.categoryName | titlecase}}</p>
-                      <div *ngFor="let sub of category.subCategory;index as subIndex">
+                      <p class="tree text-color font-weight-500">{{category.categoryName | titlecase}}</p>
+                      <div *ngFor="let sub of category.subCategory;last as las; first as fir;index as subIndex">
                         <div *ngIf="sub.isSelected">
-                          <p class=" text-color font-weight-500 kt-margin-l-15">{{sub.subCategoryName | titlecase}}</p>
+                          <ul  class="tree" >
+                          <li class="text-color font-weight-500 kt-margin-l-15" [class.last]="las|| (las==fir)">{{sub.subCategoryName | titlecase}}
                         <div class="row justify-content-start kt-margin-l-40">
                           <div *ngFor="let product of sub.products;index as idx" class="col-4">
-                            <span class="position-relative ">
-                              <label class="custom-checkbox">
-                                <span
-                                  class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{product.productName | titlecase}}</span>
-                                <input type="checkbox" [checked]="product.isSelected"
-                                  (change)="generateProduct($event.target.checked,catIndex,subIndex,idx)">
-                                <span class="checkmark top-0"></span>
-                              </label>
-                            </span>
+                                <span class="position-relative ">
+                                  <label class="custom-checkbox">
+                                    <span
+                                      class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{product.productName | titlecase}}</span>
+                                    <input type="checkbox" [checked]="product.isSelected"
+                                      (change)="generateProduct($event.target.checked,catIndex,subIndex,idx)">
+                                    <span class="checkmark top-0"></span>
+                                  </label>
+                                </span>
                           </div>
                         </div>
+                        </li>
+                        </ul>
                         </div>
                       </div>
                     </div>
