--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -6,7 +6,7 @@
     <kt-modal-header [title]="title" (action)="action($event)"></kt-modal-header>
     <div class="kt-portlet__body">
         <div class="kt-form">
-            <form [formGroup]="addUserForm">
+            <form [formGroup]="addInternalBranchForm">
 
 
                 <div class="kt-portlet__body-progress">
@@ -27,12 +27,11 @@
                                 <label for="" class="text-color font-weight-bold">Branch Name</label>
                             </div>
                             <div class="col-8">
-                                <input class="form-control" formControlName="branchName" placeholder="First Name"
-                                [class.isError]="controls.branchName.touched && controls.branchName.invalid">
-                            <mat-error
-                                *ngIf="controls.branchName.errors?.required && controls.branchName.touched">
-                                Required field
-                            </mat-error>
+                                <input class="form-control" formControlName="name" placeholder="Branch Name"
+                                    [class.isError]="controls.name.touched && controls.name.invalid">
+                                <mat-error *ngIf="controls.name.errors?.required && controls.name.touched">
+                                    Required field
+                                </mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
@@ -40,8 +39,10 @@
                                 <label for="" class="text-color font-weight-bold">Address</label>
                             </div>
                             <div class="col-8">
-                                <textarea class="form-control" formControlName="address" placeholder="e.g 012345"
-                                [class.isError]="controls.address.touched && controls.address.invalid" cols="20" rows="5"></textarea>
+                                <textarea class="form-control" placeholder="Address" formControlName="address"
+                                    placeholder="e.g 012345"
+                                    [class.isError]="controls.address.touched && controls.address.invalid" cols="20"
+                                    rows="5"></textarea>
                                 <mat-error *ngIf="controls.address.errors?.required && controls.address.touched">
                                     Required field
                                 </mat-error>
@@ -53,11 +54,13 @@
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="stateId" autocomplete="off"
-                                [class.isError]="controls.stateId.touched && controls.stateId.invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select</option>
-                            </select>
-                            <mat-error *ngIf="controls.stateId.touched && controls.stateId.errors?.required">
-                                Required field</mat-error>
+                                    [class.isError]="controls.stateId.touched && controls.stateId.invalid"
+                                    (change)="getCites()">
+                                    <option value="" [selected]="true" [disabled]="true">Select</option>
+                                    <option [value]="state.id" *ngFor="let state of states">{{state.name}}</option>
+                                </select>
+                                <mat-error *ngIf="controls.stateId.touched && controls.stateId.errors?.required">
+                                    Required field</mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
@@ -68,6 +71,8 @@
                                 <select class="form-control" formControlName="cityId" autocomplete="off"
                                     [class.isError]="controls.cityId.touched && controls.cityId.invalid">
                                     <option value="" [selected]="true" [disabled]="true">Select</option>
+                                    <option [value]="city.id" *ngFor="let city of cities">{{city.name}}</option>
+
                                 </select>
                                 <mat-error *ngIf="controls.cityId.touched && controls.cityId.errors?.required">
                                     Required field</mat-error>
@@ -78,12 +83,12 @@
                                 <label for="" class="text-color font-weight-bold">Pincode</label>
                             </div>
                             <div class="col-8">
-                                <input class="form-control" numbersOnly maxlength="6" formControlName="pinCode" placeholder="First Name"
-                                [class.isError]="controls.pinCode.touched && controls.pinCode.invalid">
-                            <mat-error
-                                *ngIf="controls.pinCode.errors?.required && controls.pinCode.touched">
-                                Required field
-                            </mat-error>
+                                <input class="form-control" numbersOnly maxlength="6" formControlName="pinCode"
+                                    placeholder="eg.123465"
+                                    [class.isError]="controls.pinCode.touched && controls.pinCode.invalid">
+                                <mat-error *ngIf="controls.pinCode.errors?.required && controls.pinCode.touched">
+                                    Required field
+                                </mat-error>
                             </div>
                         </div>
                     </div>
