--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/internal-user-branch-list/internal-user-branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/internal-user-branch-list/internal-user-branch-list.component.html
@@ -9,50 +9,43 @@
                 <ng-container matColumnDef="branchId">
                     <mat-header-cell *matHeaderCellDef >Branch Id</mat-header-cell>
                     <mat-cell *matCellDef="let internalBranch">
-                        <div class="text-color" (click)="permissions(internalBranch)">
-                            {{internalBranch.name}}
-                        </div>
+                            {{internalBranch.internalBranchUniqueId}}
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="branchName">
                     <mat-header-cell *matHeaderCellDef >Branch Name</mat-header-cell>
-                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.calories}}</mat-cell>
+                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.name}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="pincode">
                     <mat-header-cell *matHeaderCellDef >PinCode</mat-header-cell>
-                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.calories}}</mat-cell>
+                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.pinCode}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="address">
                     <mat-header-cell *matHeaderCellDef >Address</mat-header-cell>
-                    <mat-cell *matCellDef="let internalBranch">
-                        <mat-slide-toggle [color]="'accent'">
-                        </mat-slide-toggle>
-                    </mat-cell>
+                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.address}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="state">
                     <mat-header-cell *matHeaderCellDef >State</mat-header-cell>
-                    <mat-cell *matCellDef="let internalBranch">
-                        <mat-slide-toggle [color]="'accent'">
-                        </mat-slide-toggle>
-                    </mat-cell>
-                </ng-container>
+                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.state.name}}</mat-cell>
+                </ng-container>stateId
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef >City</mat-header-cell>
-                    <mat-cell *matCellDef="let internalBranch">
-                        <mat-slide-toggle [color]="'accent'">
-                        </mat-slide-toggle>
-                    </mat-cell>
+                    <mat-cell *matCellDef="let internalBranch">{{internalBranch.city.name}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let internalBranch">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editinternalBranch(internalBranch,'view')" class="kt-pointer"> View
+                            <div (click)="editInternalBranch(internalBranch,'view')" class="kt-pointer"> View
                                 |
                                 &nbsp;
                             </div>
-                            <div (click)="editinternalBranch(internalBranch,'edit')" class="kt-pointer"> Edit
+                            <div (click)="editInternalBranch(internalBranch,'edit')" class="kt-pointer"> Edit
+                                |
+                                &nbsp;
+                            </div>
+                            <div (click)="deleteInternalBranch(internalBranch)" class="kt-pointer text-danger"> Delete
 
                             </div>
                         </div>
