--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
@@ -23,8 +23,8 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <!-- Partner Name -->
                         <div class="row">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Merchant Name</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Merchant Name</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="merchantId" autocomplete="off"
@@ -40,8 +40,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Broker ID</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Broker ID</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="storeId" placeholder="e.g 012345"
@@ -52,8 +52,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Full Name</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Full Name</label>
                             </div>
                             <div class="col-8">
                                 <div class="row">
@@ -85,8 +85,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Mobile Number</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Mobile Number</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="10" formControlName="mobileNumber"
@@ -99,8 +99,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Email</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Email</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="email" placeholder="e.g abc@123.com"
@@ -115,7 +115,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Address</label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-500">Address</label>
                             </div>
                             <div class="col-8">
                                 <textarea cols="10" rows="5" class="form-control" formControlName="address"
@@ -128,8 +128,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">State</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">State</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="stateId" autocomplete="off"
@@ -145,8 +145,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">City</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">City</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="cityId" autocomplete="off"
@@ -161,8 +161,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Pin Code</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Pin Code</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="6" formControlName="pinCode"
@@ -170,8 +170,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">PAN No.</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">PAN No.</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="panCardNumber"
@@ -181,8 +181,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Name on PAN</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Name on PAN</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="nameOnPanCard"
@@ -191,8 +191,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Upload PAN</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Upload PAN</label>
                             </div>
                             <div class="col-8">
                                 <div class="input-group mb-3">
@@ -203,8 +203,8 @@
                                             (click)="file.click()">Attach</span>
                                     </div>
                                 </div>
-                                <label class="file d-none">
-                                    <input type="file" id="file" aria-label="File browser example" #file
+       form-label                          <label class="file d-none">
+       [class.mandatory]="data.action!=view"                              <input type="file" id="file" aria-label="File browser example" #file
                                         (input)="getFileInfo($event)">
                                     <span class="file-custom"></span>
                                 </label>
@@ -212,8 +212,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Status</label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-bold">Status</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="approvalStatusId" autocomplete="off"
