--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/role-add/role-add.dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/role-add/role-add.dialog.component.html
@@ -23,8 +23,8 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <!-- Partner Name -->
                         <div class="row">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Role Name</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="text-color font-weight-bold mandatory">Role Name</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="roleName" autocomplete="off"
@@ -37,8 +37,8 @@
                         </div>
 
                         <div class="row kt-padding-t-15" *ngIf="data.action != 'Update'">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">clone Role</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="text-color font-weight-bold ">clone Role</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="roleId" (change)="getModules()">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
+                            <div class="col-4 form-label">
                                 <label for="" class="text-color font-weight-bold">Role Description</label>
                             </div>
                             <div class="col-8">
@@ -58,8 +58,8 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Modules</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="text-color font-weight-bold mandatory">Modules</label>
                             </div>
                             <div class="col-8">
                                 <mat-error *ngIf="controls.moduleId.touched && controls.moduleId.errors?.required">
